@@ -14,3 +14,5 @@ void func_typedef(color)
 void func_arrayi(array(int,arg2)*,void)
 void func_arrayf(array(float,arg2)*,void)
 void func_struct(struct(int,int,int,array(struct(int,int),elt2)*,array(struct(int,int),3),string[elt3])*)
+void func_work(+string);
+void func_call(+string, string);
